# Tetris-competitive-edition

./: .gitignore  CMakeLists.txt  README.md  klocek.h  types.h
.github/workflows/: cmake.yml  cpp-linter.yml  manual-cpp-linter.yml
src/: Makefile  block.cpp  block.h  board.cpp  board.h  enums.h  game.cpp  game.h  game_time.cpp  game_time.h  gameplay.cpp  gameplay.h  headers.h  klocek.cpp  klocek.h  main  main.cpp  ncurses.h  player.cpp  player.h  score.cpp  score.h  terminal_game_test.cpp  time.cpp  time.h  ui.cpp  ui.h
src/old_concept/: board.cpp  game.cpp
